# eco-spec-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config.yml  pyproject.toml
.claude/: launch.json  settings.json
.github/workflows/: build-and-publish.yml
deploy/: main.yml
src/eco_spec_tracker/: livereload.py  main.py  mock_data.py
src/eco_spec_tracker/static/: app.css
src/eco_spec_tracker/templates/: _eco_card.html  _players_section.html  _profession_detail.html  _professions.html  _professions_section.html  _specialties_section.html  base.html  index.html  player_to_professions.html  players.html  profession_to_players.html  professions.html  specialties.html
