[project]
name = "eco-spec-tracker"
version = "0.1.0"
description = "Tracks every player's jobs/specialties on the Eco server with an HTMX-powered web UI."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  "httpx>=0.28.0",
  "eco-mcp-app",
  "watchfiles>=1.1.1",
]

[tool.uv]
managed = true

[tool.uv.sources]
eco-mcp-app = { git = "https://github.com/coilysiren/eco-mcp-app.git", rev = "7c6584b8f2eeaadcca0878230848c1da6c8ca2d9" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eco_spec_tracker"]

[tool.hatch.build.targets.wheel.force-include]
"src/eco_spec_tracker/templates" = "eco_spec_tracker/templates"
"src/eco_spec_tracker/static" = "eco_spec_tracker/static"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[dependency-groups]
dev = [
  "mypy>=1.20.0",
  "pre-commit>=4.5.1",
  "ruff>=0.15.10",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "respx>=0.22.0",
  "invoke>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
